tests/rustdoc-ui/doctest/nocapture-fail.stderr
error: struct literal body without path
  --> $DIR/nocapture-fail.rs:8:10
   |
LL |   fn foo() {
   |  __________^
LL | |     Input: 123
LL | | }
   | |_^
   |
help: you might have forgotten to add the struct literal inside the block
   |
LL ~ fn foo() { SomeStruct {
LL |     Input: 123
LL ~ } }
   |

error: aborting due to 1 previous error

